# nautilus-metadata-editor-extension

./: README.md  meson  meson.build
build-aux/meson/: postinstall.py
data/: com.gitlab.nvlgit.metadata-editor.desktop.in  meson.build
po/: LINGUAS  POTFILES  ar.po  ast.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_GB.po  es.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  kk.po  ko.po  lt.po  lv.po  meson.build  ms.po  nautilus-metadata-editor-extension.pot  nb.po  nl.po  oc.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  (+16 more)
src/: app.vala  main.vala  meson.build  nautilus-metadata-editor.gresource.xml  window.vala
src/nautilus/: meson.build  nautilus-metadata-editor-extension.c  nautilus-metadata-editor-extension.h  nautilus-metadata-editor-module.c
src/ui/: window.ui
